load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "repro",
    srcs = ["src/main.rs"],
	aliases = aliases(),
    deps = all_crate_deps(normal = True),
)

platform(
    name = "aarch64_linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

platform_transition_filegroup(
	name = "repro_arm",
	srcs = ["repro"],
	target_platform = "aarch64_linux",
)